--- a/src/pages/avatar/save/index.scss
+++ b/src/pages/avatar/save/index.scss
@@ -1,110 +1,50 @@
 @import '../../../static/styles/theme.scss';
 
-.main-container {
+.save-main-container {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #000;
+  background-color: #474546;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
 
-  .upload-origin-images {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #000;
+  .result-avatar {
+    border: 1px solid #fdfdfd;
+    width: 600px;
+    height: 600px;
+    margin: 30px auto;
+  }
 
-    .options-wrap {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 20px;
-      height: 140px;
-      border-top: 1px solid $a-border-color;
-      display: flex;
-      flex-flow: row nowrap;
-      justify-content: space-between;
-      align-items: center;
+  .share-avatar-btn,
+  .save-avatar-btn {
+    width: 600px;
+    height: 90px;
+    margin: 30px 50px;
+    background-color: transparent;
+    border: 1px solid #fdfdfd;
+    border-radius: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    position: relative;
+    font-size: 26px;
+    color: #fdfdfd;
+    box-sizing: border-box;
 
-      .options-btn {
-        flex: 2;
-        height: 90px;
-        box-sizing: border-box;
-        margin: 20px;
-        color: #fff;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        align-items: center;
-        border: none;
-        font-size: 30px;
-
-        [class^="iconfont-"] {
-          font-size: 40px;
-          margin: 0 5px;
-        }
-
-        &.wx-btn {
-          background-color: $wx-background-color;
-        }
-
-        &.upload-btn {
-          font-weight: 700;
-          position: relative;
-          font-style: italic;
-          border: 5px solid #fff;
-          border-image: linear-gradient(145deg, #00f5e7, #ff0066) 20 20;
-        }
-
-        &.next-btn {
-          flex: 3;
-          font-weight: 700;
-          background-image: linear-gradient(145deg, #c954a4, #b60b55);
-        }
-      }
+    [class^="iconfont-"] {
+      font-size: 35px;
+      margin: 0 8px;
     }
   }
 
-  .avatar-edit-images {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #000;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-
-    .drag-wrap {
-      margin: 20px auto;
-      width: 600px;
-      height: 600px;
-    }
-
-    .paster-wrap {
-      overflow-x: hidden;
-      background-color: #000;
-      flex: 1;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: flex-start;
-      align-items: center;
-
-      .paster-btn {
-        width: 150px;
-        height: 150px;
-        background-color: transparent;
-        background-size: 100% auto;
-        background-repeat: no-repeat;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 15px;
-        box-sizing: border-box;
-      }
-    }
+  .save-avatar-btn {
+    border: none;
+    background-color: #fdfdfd;
+    color: #474546;
   }
 }
