--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -11,7 +11,6 @@
   background-size: 100% 100%;
 
   .header {
-    border: 1px solid #000;
     padding: 100px 40px 0 20px;
 
     .title {
@@ -26,7 +25,6 @@
       color: #fff;
       font-size: 40px;
       font-weight: 500;
-      border: 4px solid #000;
       height: 40px;
     }
   }
@@ -39,20 +37,18 @@
   }
 
   .options {
-    margin: 175px 22px 0;
-    border: 4px solid #000;
+    margin: 190px 22px 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
 
     .button {
-      width: 340px;
+      width: 345px;
       height: 170px;
-      background-color: #fff;
-      border: 4px solid #000;
+      background-color: rgba(255, 255, 255, 0.382);
       border-radius: 5px;
       box-sizing: border-box;
-      margin-bottom: 13px;
+      margin-bottom: 15px;
     }
   }
 }
